; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/musashi/extr_m68kopnz.c_m68k_op_suba_32_ix.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/musashi/extr_m68kopnz.c_m68k_op_suba_32_ix.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@AX = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @m68k_op_suba_32_ix() #0 {
  %1 = alloca i64, align 8
  %2 = alloca i64*, align 8
  %3 = call i64 (...) @OPER_AY_IX_32()
  store i64 %3, i64* %1, align 8
  store i64* @AX, i64** %2, align 8
  %4 = load i64*, i64** %2, align 8
  %5 = load i64, i64* %4, align 8
  %6 = load i64, i64* %1, align 8
  %7 = sub nsw i64 %5, %6
  %8 = call i64 @MASK_OUT_ABOVE_32(i64 %7)
  %9 = load i64*, i64** %2, align 8
  store i64 %8, i64* %9, align 8
  ret void
}

declare dso_local i64 @OPER_AY_IX_32(...) #1

declare dso_local i64 @MASK_OUT_ABOVE_32(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
